fix(YALB-1594): WIP - fix logo size and z-index

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/layout/Layout.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/layout/Layout.module.css
@@ -11,6 +11,7 @@
     bottom: 0;
     width: 100%;
     height: 100vh;
+    z-index: 800; /* figure out a lower number, in Drupal this needs to be high */
 }
 
 .modal::before {
@@ -98,6 +99,7 @@
     display: flex;
     align-items: flex-end;
     color: hsl(210, 100%, 21%);
+    max-width: 130px;
 }
 
 .headerIcon {
